[package]
name = "airscan_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.22", features = ["json"]}
xml-rs = "0.8.0"
tokio = {version="1", features = ["full"]}
serde-xml-rs = "0.5"
anyhow = "1.0.75"
mockito = "1.2.0"
